@@ -35,8 +35,6 @@ import org.apache.kafka.image.MetadataImage;
 import org.apache.kafka.image.MetadataProvenance;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -145,7 +143,7 @@ public class AssignorBenchmarkUtils {
         return new GroupSpecImpl(
             memberSpecs,
             subscriptionType,
-            Collections.emptyMap()
+            Map.of()
         );
     }
 
@@ -335,7 +333,7 @@ public class AssignorBenchmarkUtils {
             delta.replay(new PartitionRecord()
                 .setTopicId(topicId)
                 .setPartitionId(i)
-                .setReplicas(Arrays.asList(i % 4, (i + 1) % 4)));
+                .setReplicas(List.of(i % 4, (i + 1) % 4)));
         }
     }
 }
